Converted all of the loaders to Kotlin